# startup-ecosystem

./: .gitignore  README.md  dev.ps1  docker-compose.yml  valid_res.txt
backend/: .coverage  .env.example  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/.venv312/: pyvenv.cfg
backend/.venv312/Scripts/: activate  activate.bat
backend/alembic/: env.py
backend/alembic/versions/: c25053d1b726_initial_migration.py
backend/app/: main.py
backend/app/api/routes/: ai.py  auth.py  connections.py  dashboard.py  events.py  investors.py  pitch.py  search.py  startups.py
backend/app/core/: config.py  logging.py  prompts.py  security.py
backend/app/db/: migrations.py  migrations_rag.py  migrations_vector.py  session.py
backend/app/models/: __init__.py  ai_analysis.py  ai_chunk.py  connection_request.py  event.py  investor_profile.py  investor_recommendation.py  pitch_deck.py  startup_profile.py  user.py
backend/app/schemas/: ai.py  connection.py  event.py  event_registration.py  investor.py  startup.py
backend/app/services/: cache_service.py  connection_service.py  dashboard_service.py  event_service.py  matching_service.py  pitch_deck_analyzer.py  search_service.py  vector_service.py
backend/app/services/agents/: base.py  evaluation.py  extraction.py  (+8 more)
backend/app/tasks/: ai_tasks.py
backend/app/utils/: files.py  text_splitter.py
backend/tests/: conftest.py
backend/tests/api/: test_connections_api.py  test_events_api.py  test_health.py  test_integration.py  test_startups_api.py
backend/tests/unit/: test_agents.py  test_matching_service.py
(+41 files in other folders)
