[project]
name = "startup-ecosystem-backend"
version = "0.1.0"
description = "FastAPI backend for the startup ecosystem MVP"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.39",
  "alembic==1.13.1",
  "psycopg2-binary",
  "pydantic",
  "pydantic-settings",
  "python-multipart==0.0.20",
  "openai==1.68.2",
  "pypdf==5.4.0",
  "numpy==2.2.4",
  "pgvector==0.3.6",
  "redis==5.0.1",
  "structlog==24.4.0"
]

[dependency-groups]
dev = [
  "black==25.1.0",
  "mypy==1.15.0",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "pytest-asyncio==0.23.5",
  "pytest-mock==3.12.0",
  "httpx==0.28.1",
  "ruff==0.11.2"
]

[tool.uv]
package = false
